--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title></title>
 <main></main>
+<footer>Copyright © 2021 Neo, Inc. All rights reserved.</footer>
 <script src="/bundle.js"></script>
 <link rel="stylesheet" href="/main.css" />
