[chat]feature added: multi-language code formatter

--- a/client/index.html
+++ b/client/index.html
@@ -2,4 +2,6 @@
 <title></title>
 <main></main>
 <script src="/bundle.js"></script>
+<!-- code-prettify -->
+<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=css;skin=sons-of-obsidian"></script>
 <link rel="stylesheet" href="/main.css" />
