[Welcome & App]style: cross-platform optimization

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,6 @@
 <main></main>
 <script src="/bundle.js"></script>
 <!-- code-prettify -->
-<!-- <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=scss;skin=sons-of-obsidian"></script> -->
-<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=scss;skin=sons-of-obsidian"></script>
+<!-- <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script> -->
 <link rel="stylesheet" href="/main.css" />
